PM checker. fixed #18